fix for layout issue on mobile  (title no on it's own line)
git-svn-id: https://plugins.svn.wordpress.org/wripl/trunk@687474 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -190,6 +190,7 @@ img.wripl-rotate {
 
 #wripl-slider .heading-sml.wripl-mobile {
     font-size: 8pt;
+    float: none;
 }
 
 
